# evalbench

./: .gitignore  .pycodestyle  AGENTS.md  CHANGELOG.md  Makefile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  run_client.sh
.github/: CODEOWNERS
.github/workflows/: pytest.yml
datasets/adk-tools/: example_run_config.yaml  toolbox.evalset.json
datasets/agy-cli-tools/: agy-cli-fake.evalset.json  agy-cli.evalset.json  example_run_config.yaml  example_run_fake_config.yaml  example_run_skills_config.yaml
datasets/bat/: example_run_config.yaml
datasets/bat-interact/: example_run_config.yaml  prompts.jsonl
datasets/claude-code-tools/: example_run_config.yaml  example_run_fake_config.yaml  example_run_mcp_repo_config.yaml  example_run_skills_config.yaml
datasets/codex-skills/: codex-skills.evalset.json  codex_skills_model.yaml  codex_skills_run_config.yaml
datasets/context-engineering-agent/: dataset.json  model.yaml  run.yaml
datasets/crema/: dataset.json  model.yaml  run.yaml
datasets/dart/: prompts.json
datasets/dea-tools/: README.md  dea-live-conversational.evalset.json  example_run_config.yaml
datasets/model_configs/: agy_cli_fake_model.yaml  agy_cli_model.yaml  agy_cli_skills_model.yaml  claude_code_fake_model.yaml  claude_code_mcp_repo_model.yaml  claude_code_model.yaml  gcp_data_engineering_agent_model.yaml  querydata_model.yaml
docs/: agy_cli_agent_testing.md  architecture.md  claude_code_agent_testing.md  codex_cli_agent_testing.md  judge_tools.md
docs/configs/: db-config.md  run-config.md
evalbench/: __init__.py  eval_server.py  eval_service.py  evalbench.py  run.sh
evalbench/client/: eval_client.py
evalbench/databases/: alloydb.py  bigtable.py  db.py  mysql.py  postgres.py  spanner.py  sqlite.py  sqlserver.py  util.py
evalbench/dataset/: dataset.py  deainput.py  evaladkinput.py  evaladkoutput.py  evalinteractinput.py
evalbench/evaluator/: __init__.py  adkevaluator.py  adkorchestrator.py  adktoolsorchestrator.py  agentevaluator.py  agentorchestrator.py  dataagentevaluator.py  (+8 more)
evalbench_service/: Dockerfile  entrypoint.sh  supervisord.conf  supervisord_cloudrun.conf  supervisord_combined.conf  supervisord_evalbench.conf
verifier/: truth.json  verify.py
viewer/: ai_comparer.py  background_worker.py  conversations.py  dashboard.py  main.py  precompute_trends.py  pyproject.toml  run_frontend.sh  run_precompute.py  state.py  trends.py  version.txt
viewer/static/: chart.js  style.css
(+85 files in other folders)
