[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-evalbench"
version = "1.8.0"
requires-python = ">=3.10"
description = "Evalbench - evaluation benchmarking framework"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "cloud-sql-python-connector[pg8000]",
    "google-cloud-alloydb-connector[pg8000]",
    "cloud-sql-python-connector[pytds]",
    "sqlalchemy-pytds",
    "google-genai",
    "google-cloud-secret-manager",
    "google-cloud-bigtable",
    "google-cloud-spanner",
    "sqlalchemy-spanner",
    "pandas",
    "pandas-gbq",
    "pymysql",
    "sqlalchemy",
    "pyaml_env",
    "pyarrow",
    "protobuf",
    "absl-py",
    "tabulate",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "aiologger",
    "jsonschema",
    "ratelimit",
    "backoff",
    "GitPython",
    "sqlparse",
    "redis",
    "anthropic[vertex]",
    "sqlglot",
    "pymongo",
    "mongomock",
    "rich",
    "google-adk",
    "google-cloud-geminidataanalytics>=0.11.0",
    "google-cloud-firestore",
    "google-cloud-iam",
    "google-cloud-storage",
    "dbt-core",
    "dbt-bigquery",
    "dbt-postgres",
    "a2a-sdk>=1.0.3",
    # 26.2.0 turned a long-standing deprecation into a hard error
    # (mutating SSL.Context after use), breaking google-auth's mTLS path
    # (urllib3.contrib.pyopenssl.inject_into_urllib3). Lift when google-auth
    # stops using the deprecated inject pattern.
    "pyOpenSSL<26.2",
]

[tool.uv.sources]
viewer = { workspace = true }

[project.scripts]
google-evalbench = "evalbench.evalbench:run"

[tool.setuptools.packages.find]
include = ["evalbench*"]

[tool.uv.workspace]
members = [
    "viewer",
]

[dependency-groups]
dev = [
    "pycodestyle>=2.14.0",
    "pytest>=8.0.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
markers = [
    "real_agy_install: exercise the real agy installer path (opts out of the autouse install stub)",
]
